# rten

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
rten-core/: Cargo.toml
rten-core/src/: device.rs  lib.rs  shape_and_strides.rs
rten-typed/: Cargo.toml
rten-typed/examples/: basic.rs
rten-typed/src/core/: cpu_storage.rs  cuda_storage.rs  data_type.rs  managed_storage.rs  mod.rs  storage.rs  tensor.rs
rten-untyped/: Cargo.toml
rten-untyped/examples/: basic.rs
rten-untyped/src/core/: allocator.rs  cpu_allocator.rs  device.rs  mod.rs  storage.rs  tensor.rs
rten-untyped/src/utils/: data_ptr.rs  mod.rs  unique_void_ptr.rs
src/: lib.rs
src/core/: allocator.rs  cpu_storage.rs  data_type.rs  device.rs  mod.rs  shape_and_strides.rs  storage.rs  tensor.rs
src/utils/: data_ptr.rs  mod.rs  unique_void_ptr.rs
